--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
             <div id="post">
                 <h1>Aqui vamos a hacer un blog post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>
+                    Este es un parrafo adicional mucho mas corot que el que se hizo en la clase
+                </p>
             </div>
         </div>
     </body>
